# cpp-modules-demo

./: .gitignore  CMakeLists.txt  README.md
buils/: .ninja_deps  .ninja_log  build.ninja  demo
lib/: demo.cppm
src/: main.cpp
